Fix song rating box styles
Prevents inner green box from overflowing container. Also sets color to
the same as the upcoming events box green.

--- a/slingsby/static-src/sass/_musikk.scss
+++ b/slingsby/static-src/sass/_musikk.scss
@@ -29,9 +29,8 @@
 }
 
 .rating {
-    width: 30px;
+    width: 40px;
     border: 1px solid black;
-    height: 10px;
     display: inline-block;
 }
 
